k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: employee-service
  namespace: employee-prod
  labels:
    app.kubernetes.io/name: employee-service
    app.kubernetes.io/component: backend
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "classic"
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: employee-service
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
    - name: management
      port: 8081
      targetPort: 8081
      protocol: TCP
